apps/nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nextcloud
  name: nextcloud-svc
spec:
  type: ClusterIP
  ports:
    - name: nexcloud
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: nextcloud
