apps/nextcloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: selfsigned
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
spec:
  tls:
    - hosts:
      - nextcloud.home.local
      - home-nextcloud.dynv6.net
      secretName: nextcloud-tls-cert
  rules:
    - host: nextcloud.home.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud-svc
                port:
                  number: 80
    - host: home-nextcloud.dynv6.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud-svc
                port:
                  number: 80
